# QtQuickApp

./: .gitignore  .travis.yml  CMakeLists.txt  QtQuickApp.pro
resources/: CMakeLists.txt
src/: CMakeLists.txt
